KSH-27/08/2018 Se agregaron campos en la BD y el modelo de dominio
Los campos que se agregaron se relacionan directamente al catálogo de centros de costo

--- a/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
+++ b/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
@@ -146,6 +146,9 @@
     <Compile Include="Entidades\sysdiagrams.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
+    <Compile Include="Entidades\TipoCentroCosto.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
     <Compile Include="Entidades\TipoMedidorUnidadAlmacenGas.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
