--- a/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.4Exceptions/Exceptions.MainModule/Exceptions.MainModule.csproj
+++ b/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.4Exceptions/Exceptions.MainModule/Exceptions.MainModule.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Validaciones\Error.cs" />
     <Compile Include="Validaciones\Exito.cs" />
     <Compile Include="Validaciones\ExpresionRegular.cs" />
+    <Compile Include="Validaciones\Notificacion.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="LEEME.txt" />
