JSA-Avance en Notificacion

--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -38,7 +38,7 @@
     <add key="AppCompraGasFinalizarDescarga" value="Entrada de gas - Inventario General|Finalizar Descarga|ic_finalizar_descarga" />
     <add key="AppCompraGasIniciarDescarga" value="Entrada de gas - Inventario General|Iniciar Descarga|ic_iniciar_descarga" />
     <add key="AppCompraVerOCompra" value="Compras|Ordenes de compra|ic_ordenes_compra" />
-    <add key="" value="" />
+    <add key="AppNotificacionKeyAutorizacion" value="AIzaSyAmt7VWV6PGYouqEHEFi2n6sJHmJUuwzRk" />
     <add key="" value="" />
     <add key="" value="" />
     <add key="" value="" />
