--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/app.config
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/app.config
@@ -22,4 +22,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <appSettings>
+    <add key="AppNotificacionKeyAutorizacion" value="AIzaSyAmt7VWV6PGYouqEHEFi2n6sJHmJUuwzRk" />
+  </appSettings>
 </configuration>
