KSH-27/08/2018 Se coloca el timer para el proceso de 5 min.

--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -18,11 +18,20 @@
     <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.12;initial catalog=Sagas.MainModule;user id=sa;password=Nts.682;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
+    <!--URL del WebApp-->
     <add key ="WebAppURL" value="http://localhost:54735"/>
+    <!--URL del WebApp-->
+    
+    <!--GENERAR JWT TOKEN-->
     <add key="JWT_SECRET_KEY" value="Xnb0vbcDdIPrjhqel0YHTibiM2MU8ftO" />
     <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:5469" />
     <add key="JWT_ISSUER_TOKEN" value="http://localhost:5469" />
     <add key="JWT_EXPIRE_MINUTES" value="30" />
+    <!--GENERAR JWT TOKEN-->
+
+    <!--TIMER GLOBAL-->
+    <add key="GlobalTimerTime" value="300000" />
+    <!--TIMER GLOBAL-->
 
     <!--CORREOS ELECTRÓNICOS-->
     <add key="MailServidor" value="dime158.dizinc.com" />
@@ -33,7 +42,9 @@
     <!--Asuntos-->
     <add key="Asunto_RequisicionRevisarExistencia" value="Nueva requisición {0}" />
     <!--CORREOS ELECTRÓNICOS-->
-    
+
+    <!--MOBILE-->
+    <!--Permisos para el menú-->
     <add key="AppCompraEntraGas" value="Entrada de gas - Inventario General|Registrar Papeleta|ic_papeleta" />
     <add key="AppCompraGasFinalizarDescarga" value="Entrada de gas - Inventario General|Finalizar Descarga|ic_finalizar_descarga" />
     <add key="AppCompraGasIniciarDescarga" value="Entrada de gas - Inventario General|Iniciar Descarga|ic_iniciar_descarga" />
@@ -50,6 +61,8 @@
     <add key="" value="" />
     <add key="" value="" />
     <add key="" value="" />
+    <!--Permisos para el menú-->
+    <!--MOBILE-->
   </appSettings>
   <system.web>
     <authentication mode="None" />
