--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -18,17 +18,21 @@
     <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.12;initial catalog=Sagas.MainModule;user id=sa;password=Nts.682;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
-    <add key ="WebAppURL" value="http://localhost:54735"/>
+    <add key="WebAppURL" value="http://localhost:54735" />
     <add key="JWT_SECRET_KEY" value="Xnb0vbcDdIPrjhqel0YHTibiM2MU8ftO" />
     <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:5469" />
     <add key="JWT_ISSUER_TOKEN" value="http://localhost:5469" />
     <add key="JWT_EXPIRE_MINUTES" value="30" />
 
     <!--CORREOS ELECTRÓNICOS-->
-    <add key="MailServidor" value="dime158.dizinc.com" />
-    <add key="MailPuerto" value="465" />
+    <!--<add key="MailServidor" value="dime158.dizinc.com" />
+    <add key="MailPuerto" value="465" />-->
+    <add key="MailServidor" value="smtp.gmail.com" />
+    <add key="MailPuerto" value="25" />
+    <add key="MailUsuario" value="neoteck.infraestructura@gmail.com"/>
     <add key="MailContrasena" value="Neoteck.123" />
     <add key="RutaPlantillasHtml" value="~/PlantillasHtml/" />
+
 
     <!--Asuntos-->
     <add key="Asunto_RequisicionRevisarExistencia" value="Nueva requisición {0}" />
@@ -55,7 +59,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" maxRequestLength="6042"/>
+    <httpRuntime targetFramework="4.5.2" maxRequestLength="6042" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
