--- a/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.3Mail/Mail.MainModule.csproj
+++ b/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.3Mail/Mail.MainModule.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\FBNotificacionDTO.cs" />
     <Compile Include="EnviarCorreos.cs" />
     <Compile Include="IMensajeCorreo.cs" />
     <Compile Include="MensajeCorreo.cs" />
