--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
@@ -14,17 +14,25 @@
     <add key="PostCompraGas" value="api/compras/gas/PostCompraGas" />
     <add key="GetBuscarReq" value="api/compras/buscar/requisicion/" />
     <add key="PostGenerarOrdenesCompra" value="api/compras/guardar/ordencompra" />
+    <add key="PutCancelarOrdenCompra" value="api/compras/cancelar/ordencompra" />
+    <add key="PutAutorizarCompra" value="api/compras/autoroizar/ordencompra" />
+    <add key="GetOrdenesCompra" value="api/compras/buscar/ordenescompra/" />
     <!--Compras-->
 
     <!--Catalogos-->    
     <add key="GetListaEmpresasLogin" value="api/catalogos/empresas/listaempresaslogin" />
-    <add key="GetListaEmpresas" value="api/catalogos/empresas/listaempresa" />
-    <add key="GetListaEmpresascad" value="api/catalogos/empresas/listaempresa/" />
-    <add key="GetListaUsuarios" value="api/catalogos/usuarios/listausuarios/" />
+    <add key="GetListaEmpresas" value="api/catalogos/empresas/listaempresa" />  
+    <add key="GetListaEmpresascad" value="api/catalogos/empresas/listaempresa/" />    
+    <add key="GetListaUsuarios" value="api/catalogos/usuarios/listausuarios/" />    
     <add key="GetListaProductos" value="api/catalogos/productos/listaproductos/" />
     <add key="GetListaProductosAsociados" value="api/catalogos/productos/listaproductosasociados/" />
-    <add key="GetListaProveedores" value="api/catalogos/consulta/proveedores" />
-    <add key="GetCentrosCostos" value="api/catalogos/consulta/centrosdecosto/" />
+    <add key="GetListaProveedores" value="api/catalogos/consulta/proveedores" />    
+    <add key="GetCentrosCostos" value="api/catalogos/consulta/centrosdecosto/" />    
+    <add key="PostRegistraCuentaContable" value="api/catalogos/registra/cuenta/contable" />
+    <add key="PutModificaCuentaContable" value="api/catalogos/modifica/cuenta/contable" />
+    <add key="PutEliminaCuentaContable" value="api/catalogos/elimina/cuenta/contable" />
+    <add key="GetListaCuentasContables" value="api/catalogos/consulta/cuentas/contables/" />
+    <add key="GetCuentaContable" value="api/catalogos/consulta/cuenta/contable/" />
     <!--Catalogos-->
     
     <!--Requisicion-->
