--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -25,14 +25,15 @@
     <add key="JWT_EXPIRE_MINUTES" value="30" />
 
     <!--CORREOS ELECTRÓNICOS-->
-    <!--<add key="MailServidor" value="dime158.dizinc.com" />
-    <add key="MailPuerto" value="465" />-->
     <add key="MailServidor" value="smtp.gmail.com" />
     <add key="MailPuerto" value="25" />
     <add key="MailUsuario" value="neoteck.infraestructura@gmail.com"/>
     <add key="MailContrasena" value="Neoteck.123" />
+<!--<add key="MailServidor" value="dime158.dizinc.com" />
+    <add key="MailPuerto" value="465" />
+    <add key="MailUsuario" value="sagas@neoteck.com.mx"/>
+    <add key="MailContrasena" value="SaGas.123" />-->
     <add key="RutaPlantillasHtml" value="~/PlantillasHtml/" />
-
 
     <!--Asuntos-->
     <add key="Asunto_RequisicionRevisarExistencia" value="Nueva requisición {0}" />
