JOTM 29-08-2018 Inicio registro de estaciones de carburación
Inicio iniciales y finales de estaciones de carburación

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -92,7 +92,11 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".LecturaDatosActivity"></activity>
+        <activity
+            android:name=".Activity.LecturaDatosActivity"
+            android:label="@string/toma_de_lectura" />
+        <activity android:name=".Activity.LecturaP5000Activity"
+            android:label="@string/toma_de_lectura" ></activity>
     </application>
 
 </manifest>
