JSA-29/08/2018- Orden compra
diseño complemento gas
Avance en Orden compra almacen

--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
@@ -3909,6 +3909,7 @@
     <Compile Include="OrdenCompra\Model\enumIVA.cs" />
     <Compile Include="OrdenCompra\Model\OrdenCompraCrearDTO.cs" />
     <Compile Include="OrdenCompra\Model\OrdenCompraDTO.cs" />
+    <Compile Include="OrdenCompra\Model\OrdenCompraEstatus.cs" />
     <Compile Include="OrdenCompra\Model\OrdenCompraProductoCrearDTO.cs" />
     <Compile Include="OrdenCompra\Model\OrdenCompraRespuestaDTO.cs" />
     <Compile Include="OrdenCompra\Model\ProdcutoOC.cs" />
