JSA-Flujo requicion
Correccion de datos en 0

--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
@@ -17,6 +17,7 @@
     <add key="PutCancelarOrdenCompra" value="api/compras/cancelar/ordencompra" />
     <add key="PutAutorizarCompra" value="api/compras/autoroizar/ordencompra" />
     <add key="GetOrdenesCompra" value="api/compras/buscar/ordenescompra/" />
+    <add key="GetBuscarOrdenCompra" value="api/compras/buscar/ordencompra/" />
     <!--Compras-->
 
     <!--Catalogos-->    
