--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
@@ -3907,6 +3907,7 @@
     </Compile>
     <Compile Include="OrdenCompra\Model\enumIEPS.cs" />
     <Compile Include="OrdenCompra\Model\enumIVA.cs" />
+    <Compile Include="OrdenCompra\Model\OrdenCompraCancelar.cs" />
     <Compile Include="OrdenCompra\Model\OrdenCompraCrearDTO.cs" />
     <Compile Include="OrdenCompra\Model\OrdenCompraDTO.cs" />
     <Compile Include="OrdenCompra\Model\OrdenCompraEstatus.cs" />
