--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -95,8 +95,12 @@
         <activity
             android:name=".Activity.LecturaDatosActivity"
             android:label="@string/toma_de_lectura" />
-        <activity android:name=".Activity.LecturaP5000Activity"
-            android:label="@string/toma_de_lectura" ></activity>
+        <activity
+            android:name=".Activity.LecturaP5000Activity"
+            android:label="@string/toma_de_lectura" />
+        <activity android:name=".Activity.CameraLecturaActivity" android:label="@string/toma_de_lectura">
+
+        </activity>
     </application>
 
 </manifest>
