--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
@@ -45,6 +45,10 @@
     <add key="PutActulizarAutorizacion" value="api/requisicion/update/requisicion/autorizacion" />
     <add key="PutCancelarRequisicion" value="api/requisicion/cancela/requisicion" />
     <!--Requisicion-->
+    
+    <!--Inventario-->
+    <add key="PostGuardarEntradas" value="api/almacen/entrada/producto" />
+    <!--Inventario-->
 
     <!--Para el funcionamiento del token-->
     <add key="JWT_SECRET_KEY" value="Xnb0vbcDdIPrjhqel0YHTibiM2MU8ftO" />
