--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/DS.MainModule.csproj
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/DS.MainModule.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AlmacenController.cs" />
     <Compile Include="Controllers\CatalogosController.cs" />
     <Compile Include="Controllers\ComprasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
