--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
@@ -3603,6 +3603,7 @@
     <Content Include="assets\plugins\waitme\waitMe.js" />
     <Content Include="assets\plugins\waitme\waitMe.min.css" />
     <Content Include="assets\plugins\waitme\waitMe.min.js" />
+    <Content Include="Catalogos\Vista\CentrosCosto.aspx" />
     <Content Include="Catalogos\Vista\CuentasContables.aspx" />
     <Content Include="Catalogos\Vista\Proveedor.aspx" />
     <Content Include="Compras\Vistas\Compras.aspx" />
@@ -3885,9 +3886,26 @@
     <Compile Include="Agente\AgenteServicios.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Catalogos\Model\CentroCostoCrearDTO.cs" />
+    <Compile Include="Catalogos\Model\CentroCostoEliminarDTO.cs" />
+    <Compile Include="Catalogos\Model\CentroCostoModificarDTO.cs" />
     <Compile Include="Catalogos\Model\CuentaContableCrearDto.cs" />
     <Compile Include="Catalogos\Model\CuentaContableEliminarDto.cs" />
     <Compile Include="Catalogos\Model\CuentaContableModificarDto.cs" />
+    <Compile Include="Catalogos\Model\ProveedorCrearDTO.cs" />
+    <Compile Include="Catalogos\Model\ProveedorEliminarDTO.cs" />
+    <Compile Include="Catalogos\Model\ProveedorModificarDTO.cs" />
+    <Compile Include="Catalogos\Model\TipoCentroCostoEnum.cs" />
+    <Compile Include="Catalogos\Servicio\CentroCostoServicio.cs" />
+    <Compile Include="Catalogos\Servicio\EmpresaServicio.cs" />
+    <Compile Include="Catalogos\Servicio\ProveedorServicio.cs" />
+    <Compile Include="Catalogos\Vista\CentrosCosto.aspx.cs">
+      <DependentUpon>CentrosCosto.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Catalogos\Vista\CentrosCosto.aspx.designer.cs">
+      <DependentUpon>CentrosCosto.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Catalogos\Vista\CuentasContables.aspx.cs">
       <DependentUpon>CuentasContables.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -3918,7 +3936,7 @@
     <Compile Include="OrdenCompra\Model\OrdenCompraProductoCrearDTO.cs" />
     <Compile Include="OrdenCompra\Model\OrdenCompraRespuestaDTO.cs" />
     <Compile Include="OrdenCompra\Model\ProdcutoOC.cs" />
-    <Compile Include="OrdenCompra\Model\ProveedorDTO.cs" />
+    <Compile Include="Catalogos\Model\ProveedorDTO.cs" />
     <Compile Include="OrdenCompra\Model\RequisicionOCDTO.cs" />
     <Compile Include="OrdenCompra\Servicio\OrdenCompraServicio.cs" />
     <Compile Include="OrdenCompra\Vistas\Compra.aspx.cs">
