Se creo Appi de CRUD de Catalogos Usuarios y Empresas
Se desarrollo la funcionalidad para poder Agregar, modificar y eliminar los catalogos de Usuario y Empresas, de lado de back end.

--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -72,13 +72,19 @@
     <Compile Include="DTOs\Catalogo\CuentaContableCrearDto.cs" />
     <Compile Include="DTOs\Catalogo\CuentaContableEliminarDto.cs" />
     <Compile Include="DTOs\Catalogo\CuentaContableModificarDto.cs" />
+    <Compile Include="DTOs\Catalogo\EmpresaCrearDTO.cs" />
     <Compile Include="DTOs\Catalogo\EmpresaDTO.cs" />
+    <Compile Include="DTOs\Catalogo\EmpresaEliminarDto.cs" />
+    <Compile Include="DTOs\Catalogo\EmpresaModificarDto.cs" />
     <Compile Include="DTOs\Catalogo\ProveedorCrearDto.cs" />
     <Compile Include="DTOs\Catalogo\ProveedorDto.cs" />
     <Compile Include="DTOs\Catalogo\ProductoDTO.cs" />
     <Compile Include="DTOs\Catalogo\ProveedorEliminarDto.cs" />
     <Compile Include="DTOs\Catalogo\ProveedorModificarDto.cs" />
+    <Compile Include="DTOs\Catalogo\UsuarioCrearDto.cs" />
     <Compile Include="DTOs\Catalogo\UsuarioDTO.cs" />
+    <Compile Include="DTOs\Catalogo\UsuarioEliminarDto.cs" />
+    <Compile Include="DTOs\Catalogo\UsuarioModificarDto.cs" />
     <Compile Include="DTOs\Compras\OrdenCompraCrearDTO.cs" />
     <Compile Include="DTOs\Compras\OrdenCompraDTO.cs" />
     <Compile Include="DTOs\Compras\OrdenCompraProductoCrearDTO.cs" />
