--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
@@ -18,6 +18,8 @@
     <add key="PutAutorizarCompra" value="api/compras/autoroizar/ordencompra" />
     <add key="GetOrdenesCompra" value="api/compras/buscar/ordenescompra/" />
     <add key="GetBuscarOrdenCompra" value="api/compras/buscar/ordencompra/" />
+    <add key="GetOrdenCompraEstatus" value="api/compras/buscar/ordenescompra/estatus" />
+   
     <!--Compras-->
 
     <!--Catalogos-->
